# advent-of-code

./: .gitignore  README.md  aoc.go  aoc_test.go  go.mod  go.sum  heap.go
2019/: advent.scm  intcode.scm
2019/01/: chicken.scm
2019/02/: chicken.scm
2019/03/: brute.scm  chicken.scm
2019/04/: chicken.scm
2019/05/: chicken.scm
2019/06/: chicken.scm
2019/07/: chicken.scm  intcode.scm
2019/08/: chicken.scm
2019/09/: chicken.scm
2019/10/: chicken.scm
2019/11/: chicken.scm
2019/12/: chicken.scm
2019/13/: chicken.scm
2019/14/: chicken.scm
2019/15/: chicken.scm
2019/16/: chicken.scm
2019/17/: chicken.scm
2019/18/: chicken.scm
2019/19/: chicken.scm
2020/: Cargo.toml  shell.nix
2020/data/: template.rs
2021/: README.md  mkday.go  template.go  template.txt
2021/01/: a.go  solve.go  solve_test.go
2021/02/: solve.go  solve_test.go
2021/03/: solve.go  solve_test.go
2021/04/: solve.go  solve_test.go
2021/05/: solve.go  solve_test.go
2021/06/: solve.go  solve_test.go
2021/07/: solve.go  solve_test.go
2021/08/: solve.go  solve_test.go
2021/09/: solve.go  solve_test.go
2021/10/: solve.go  solve_test.go
2021/11/: solve.go  solve_test.go
2021/12/: solve.go  solve_test.go
2021/13/: solve.go  solve_test.go
2021/14/: solve_test.go
2021/15/: solve_test.go
2021/16/: solve_test.go
2021/17/: solve_test.go
2021/18/: snailfish_test.go  solve_test.go
2021/19/: solve_test.go
2021/20/: solve_test.go
2021/21/: solve_test.go
2022/: Cargo.toml  shell.nix
2022/data/: template.rs
2023/: flake.nix  mkday.go  template.txt
(+31 files in other folders)
