[package]
name = "aoc2020"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "cookies"]}
anyhow = { version = "1.0", features = ["backtrace"]}
itertools = "0.10.5"
regex = "1.7.0"
