[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "cookies"]}
anyhow = { version = "1.0", features = ["backtrace"]}
itertools = "0.14"
regex = "1.11.1"
ndarray = "0.16"
sscanf = "0.4.2"
